--- a/iOS/summerPlayer/Podfile
+++ b/iOS/summerPlayer/Podfile
@@ -1,13 +1,21 @@
-# Uncomment this line to define a global platform for your project
-# platform :ios, '9.0'
+
+platform :ios, '9.0'
 
 target 'summerPlayer' do
-  # Comment this line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
-#test project.
-pod 'Alamofire', '2.0.2'
+# Libary List.
+# PagingMenu.
+pod "PagingMenuController"
 
-  # Pods for summerPlayer
+post_install do |installer|
+ installer.pods_project.targets.each do |target|
+	 target.build_configurations.each do |config|
+		 config.build_settings['SWIFT_VERSION'] = '3.0'
+	 end
+ end
+end
+
+
 
 end
