--- a/iOS/summerPlayer/Podfile
+++ b/iOS/summerPlayer/Podfile
@@ -6,7 +6,7 @@ target 'summerPlayer' do
 
 # Libary List.
 # PagingMenu.
-#pod "PagingMenuController"
+pod 'XLPagerTabStrip', '~> 6.0'
 
 post_install do |installer|
  installer.pods_project.targets.each do |target|
